# cognizantaimlap_r2026

deeplearning/: pyproject.toml
deeplearning/src/deep_learning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
deeplearning/src/deepmlapp/utils/: callbacksdemo.py  cnn_demo.py  exp_tracker.py
ml4/src/gatewayapp/: main.py
nlpws/: pyproject.toml
nlpws/src/machinelearning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
nlpws/src/nlpapp/utils/: bert_selfattention.py  llm_txt_gen.py  ner_demo.py  text_preprocess.py  topic_modeling.py
nodejsapp/: package-lock.json  package.json  server.js
ragws/: dockerfile  food_delivery_rag_evaluation_report.csv  pyproject.toml
ragws/machinelearning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ragws/src/machinelearning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ragws/src/ragapp/agents/: delivery_support_agent.py  hr_agent.py
ragws/src/ragapp/api/: prompt_api.py  prompt_request.py
ragws/src/ragapp/data/: rag_evaluation_harness_delivery_policy.csv
ragws/src/ragapp/data_ingestor/: data_input.py
ragws/src/ragapp/filters/: safety_filter.py
ragws/src/ragapp/utils/: code_completion.py  eval_rag.py  openai_test.py  rag_engine.py
ragws/src/ragapp/vectordatabase/: chroma.sqlite3
ragws/src/ragapp/views/: app.py
supervisedml/src/supervisedmlapp/configurations/: conf.py
supervisedml/src/supervisedmlapp/utils/: linear_reg.py  logistic_reg.py  randomforest_tree.py
tripmateapp/src/: App.css  App.jsx
tripmateapp/src/Flights/: Flight.jsx
tripmateapp/src/Timer/: Timer.css  Timer.jsx
uiapp/: home.js  index.html
