[project]
name = "machinelearning"
version = "0.1.0"
description = "Supervised and unsupervised ML algorithm practice"
requires-python = ">=3.10"
dependencies = [
    # Core scientific stack
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",

    # ML framework
    "scikit-learn>=1.5",

    # Gradient boosting
    "xgboost>=2.0",
    "lightgbm>=4.3",

    # Deep learning (optional — remove if CPU-only is preferred)
    # "torch>=2.3",

    # Visualization
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "plotly>=5.22",

    # Notebooks
    "jupyterlab>=4.2",
    "ipywidgets>=8.1",

    # Utilities
    "tqdm>=4.66",
    "joblib>=1.4",
    "python-dotenv>=1.0",
    "onnx>=1.14",
    "onnxruntime>=1.17",
    "skl2onnx>=1.14",
    "tensorflow>=2.21.0",
    "keras>=2.21.0",
    "mlflow>=2.3",
    "tf2onnx>=1.14",
    "nltk>=3.9",
    "requests",
     "beautifulsoup4",
     "wordcloud",
     "spacy",
     "transformers",
     "torch",
     "requests",
     "stanford-corenlp",
     "bertviz",
     "tiktoken",
     "anthropic",
     "openai",
     "sentence-transformers",
     "langchain>=1.0.3",
    "langchain-core>=1.0.3",
    "langchain-classic>=1.0.3",
    "langchain-community>=0.4.0",
    "langchain-openai>=1.0.1",
    "openai>=1.90.0",
     "chromadb",
     "streamlit",
     "python-dotenv",
     "pypdf",
     "docx2txt",
     "langchain-openai",
     "langchain-huggingface",
     "langchain-chroma",
     "torchvision",
     "sentence-transformers",
     "better-profanity",
     "azure.identity",
     "langchain-openai",
      "langgraph",
      "gTTS",
      "redis",
      "prometheus_client"
     
    
]

[project.optional-dependencies]
nlp = ["nltk>=3.9", "gensim>=4.3"]
dev = [
    "pytest>=8.2",
    "black>=24.4",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
